--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <link rel="stylesheet" href="./Ressources/CSS/style.css">
   </head>
   <body>
-    <header>
-      <div class="logo">
+    <header class="header">
+      <div class="header_logo">
         <img src="./Ressources/Images/img-tea-cozy-logo.png" alt="Logo">
       </div>
-      <nav class="navBar">
+      <nav class="header_navbar">
         <span><a href="#">Mission</a></span>
         <span><a href="#">Featured Tea</a></span>
         <span><a href="#">Locations</a></span>
       </nav>
     </header>
 
-    <section class="headlineSection">
-      <div class="headlineImage">
-        <div class="headline">
+    <section class="title">
+      <div class="title_imagecontainer">
+        <div class="title_imagecontainer_headline">
           <h2>Our Mission</h2>
           <h4>Handpicked, Artisanally, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
         </div>
@@ -27,28 +27,28 @@
     </section>
 
     <section class="content">
-      <div class="container">
-        <div class="headlineContent">
+      <div class="content_container">
+        <div class="content_container_headline">
           <h2>Tea of the Month</h2>
           <h4>What's Steeping at The Tea Cozy?</h4>
         </div>
-        <div class="Item">
+        <div class="content_container_item">
           <img src="./Ressources/Images/img-berryblitz.jpg" alt="Fall Berry Blitz Tea">
           <h4>Fall Berry Blitz Tea</h4>
         </div>
-        <div class="Item">
+        <div class="content_container_item">
           <img src="./Ressources/Images/img-spiced-rum.jpg" alt="Spiced Rum Tea">
           <h4>Spiced Rum Tea</h4>
         </div>
-        <div class="Item">
+        <div class="content_container_item">
           <img src="./Ressources/Images/img-donut.jpg" alt="Seasonal Donut">
           <h4>Seasonal Donut</h4>
         </div>
-        <div class="Item">
+        <div class="content_container_item">
           <img src="./Ressources/Images/img-myrtle-ave.jpg" alt="Myrtle Ave Tea">
           <h4>Myrtle Ave Tea</h4>
         </div>
-        <div class="Item">
+        <div class="content_container_item">
           <img src="./Ressources/Images/img-bedford-bizarre.jpg" alt="Bedford Bizzare Tea">
           <h4>Bedford Bizzare Tea</h4>
         </div>
