Added section content

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="header_logo">
+      <div class="header_logo"
         <img src="./Ressources/Images/img-tea-cozy-logo.png" alt="Logo">
       </div>
       <nav class="header_navbar">
@@ -19,39 +19,35 @@
 
     <section class="title">
       <div class="title_imagecontainer">
-        <div class="title_imagecontainer_headline">
-          <h2>Our Mission</h2>
-          <h4>Handpicked, Artisanally, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
-        </div>
+        <h2>Our Mission</h2>
+        <h4>Handpicked, Artisanally, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
       </div>
     </section>
 
     <section class="content">
-      <div class="content_container">
-        <div class="content_container_headline">
-          <h2>Tea of the Month</h2>
-          <h4>What's Steeping at The Tea Cozy?</h4>
-        </div>
-        <div class="content_container_item">
-          <img src="./Ressources/Images/img-berryblitz.jpg" alt="Fall Berry Blitz Tea">
-          <h4>Fall Berry Blitz Tea</h4>
-        </div>
-        <div class="content_container_item">
-          <img src="./Ressources/Images/img-spiced-rum.jpg" alt="Spiced Rum Tea">
-          <h4>Spiced Rum Tea</h4>
-        </div>
-        <div class="content_container_item">
-          <img src="./Ressources/Images/img-donut.jpg" alt="Seasonal Donut">
-          <h4>Seasonal Donut</h4>
-        </div>
-        <div class="content_container_item">
-          <img src="./Ressources/Images/img-myrtle-ave.jpg" alt="Myrtle Ave Tea">
-          <h4>Myrtle Ave Tea</h4>
-        </div>
-        <div class="content_container_item">
-          <img src="./Ressources/Images/img-bedford-bizarre.jpg" alt="Bedford Bizzare Tea">
-          <h4>Bedford Bizzare Tea</h4>
-        </div>
+      <div class="content_headline">
+        <h2>Tea of the Month</h2>
+        <h4>What's Steeping at The Tea Cozy?</h4>
+      </div>
+      <div class="content_item">
+        <img src="./Ressources/Images/img-berryblitz.jpg" alt="Fall Berry Blitz Tea">
+        <h4>Fall Berry Blitz Tea</h4>
+      </div>
+      <div class="content_item">
+        <img src="./Ressources/Images/img-spiced-rum.jpg" alt="Spiced Rum Tea">
+        <h4>Spiced Rum Tea</h4>
+      </div>
+      <div class="content_item">
+        <img src="./Ressources/Images/img-donut.jpg" alt="Seasonal Donut">
+        <h4>Seasonal Donut</h4>
+      </div>
+      <div class="content_item">
+        <img src="./Ressources/Images/img-myrtle-ave.jpg" alt="Myrtle Ave Tea">
+        <h4>Myrtle Ave Tea</h4>
+      </div>
+      <div class="content_item">
+        <img src="./Ressources/Images/img-bedford-bizarre.jpg" alt="Bedford Bizzare Tea">
+        <h4>Bedford Bizzare Tea</h4>
       </div>
     </section>
 
