Fixed Footer Background Picture

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+
+<!-- Landing Page for Tea Cozy Project of CodeCademy -->
+
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -6,37 +9,48 @@
     <link rel="stylesheet" href="./Ressources/CSS/style.css">
   </head>
   <body>
+
+    <!-- Start of Header -->
     <header class="header">
-      <div class="header_logo"
+      <!-- Nested Header Logo -->
+      <div class="header_logo">
         <img src="./Ressources/Images/img-tea-cozy-logo.png" alt="Logo">
       </div>
+      <!-- Nested Bar for Navigation -->
       <nav class="header_navbar">
         <span><a href="#">Mission</a></span>
         <span><a href="#">Featured Tea</a></span>
         <span><a href="#">Locations</a></span>
       </nav>
-    </header>
+    </header> <!-- End of Header -->
 
-    <section class="title">
-      <div class="title_imagecontainer">
+    <!-- Start of Title Section -->
+    <section class="title-image">
+      <!-- Div to contain title Image -->
+      <div class="title-image_headline">
         <h2>Our Mission</h2>
         <h4>Handpicked, Artisanally, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
       </div>
-    </section>
+    </section> <!-- End of Title Section -->
 
+    <!-- Start of Content Section -->
     <section class="content">
+      <!-- Nested Headline element -->
       <div class="content_headline">
         <h2>Tea of the Month</h2>
         <h4>What's Steeping at The Tea Cozy?</h4>
       </div>
+      <!-- Nested item containing image and underline -->
       <div class="content_item">
         <img src="./Ressources/Images/img-berryblitz.jpg" alt="Fall Berry Blitz Tea">
         <h4>Fall Berry Blitz Tea</h4>
       </div>
+      <!-- Nested item containing image and underline -->
       <div class="content_item">
         <img src="./Ressources/Images/img-spiced-rum.jpg" alt="Spiced Rum Tea">
         <h4>Spiced Rum Tea</h4>
       </div>
+      <!-- Nested item containing image and underline -->
       <div class="content_item">
         <img src="./Ressources/Images/img-donut.jpg" alt="Seasonal Donut">
         <h4>Seasonal Donut</h4>
@@ -45,11 +59,41 @@
         <img src="./Ressources/Images/img-myrtle-ave.jpg" alt="Myrtle Ave Tea">
         <h4>Myrtle Ave Tea</h4>
       </div>
+      <!-- Nested item containing image and underline -->
       <div class="content_item">
         <img src="./Ressources/Images/img-bedford-bizarre.jpg" alt="Bedford Bizzare Tea">
         <h4>Bedford Bizzare Tea</h4>
       </div>
-    </section>
+    </section> <!-- End of Content Section -->
+
+    <!-- Start of Footer -->
+    <footer>
+      <div class="locations">
+        <div class="locations_container">
+          <div class="locations_container_headline">
+            <h1>Locations</h1>
+          </div>
+          <div class="locations_container_item">
+            <h2>Downtown</h2>
+            <h3>384 West 4ht St</h3>
+            <h3>Suite 108</h3>
+            <h3>Portland, Maine</h3>
+          </div>
+          <div class="locations_container_item">
+            <h3>East Bayside</h3>
+            <h4>3433 Phisherman's Avenue</h4>
+            <h4>(Northwest Corner)</h4>
+            <h4>Portland, Maine</h4>
+          </div>
+          <div class="locations_container_item">
+            <h3>Oakdale</h3>
+            <h4>515 Crescent Avenue</h4>
+            <h4>Second Floor</h4>
+            <h4>Portland, Maine</h4>
+          </div>
+        </div>
+      </div>
+    </footer> <!-- End of footer -->
 
   </body>
 </html>
