--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
 
     <!-- Start of Header -->
-    <header class="header">
+    <header>
       <!-- Nested Header Logo -->
       <div class="header_logo">
         <img src="./Ressources/Images/img-tea-cozy-logo.png" alt="Logo">
@@ -34,37 +34,37 @@
     </section> <!-- End of Title Section -->
 
     <!-- Start of Content Section -->
-    <section class="content">
+    <main>
       <!-- Nested Headline element -->
-      <div class="content_headline">
+      <div class="main_headline">
         <h2>Tea of the Month</h2>
         <h4>What's Steeping at The Tea Cozy?</h4>
       </div>
       <!-- Nested item containing image and underline -->
-      <div class="content_item">
+      <div class="main_item">
         <img src="./Ressources/Images/img-berryblitz.jpg" alt="Fall Berry Blitz Tea">
         <h4>Fall Berry Blitz Tea</h4>
       </div>
       <!-- Nested item containing image and underline -->
-      <div class="content_item">
+      <div class="main_item">
         <img src="./Ressources/Images/img-spiced-rum.jpg" alt="Spiced Rum Tea">
         <h4>Spiced Rum Tea</h4>
       </div>
       <!-- Nested item containing image and underline -->
-      <div class="content_item">
+      <div class="main_item">
         <img src="./Ressources/Images/img-donut.jpg" alt="Seasonal Donut">
         <h4>Seasonal Donut</h4>
       </div>
-      <div class="content_item">
+      <div class="main_item">
         <img src="./Ressources/Images/img-myrtle-ave.jpg" alt="Myrtle Ave Tea">
         <h4>Myrtle Ave Tea</h4>
       </div>
       <!-- Nested item containing image and underline -->
-      <div class="content_item">
+      <div class="main_item">
         <img src="./Ressources/Images/img-bedford-bizarre.jpg" alt="Bedford Bizzare Tea">
         <h4>Bedford Bizzare Tea</h4>
       </div>
-    </section> <!-- End of Content Section -->
+    </main> <!-- End of Content Section -->
 
     <!-- Start of Footer -->
     <footer>
@@ -93,6 +93,15 @@
           </div>
         </div>
       </div>
+      <div class="contact">
+        <h1>Tea Cozy</h1>
+        <h5>contact@theteacozy.com</h5>
+        <h5>917-555-8904</h5>
+      </div>
+      <div class="copyright">
+        <h5>copyright The Tea Cozy 2017</h5>
+      </div>
+
     </footer> <!-- End of footer -->
 
   </body>
