Correct margins and paddings

--- a/index.html
+++ b/index.html
@@ -24,60 +24,64 @@
       </nav>
     </header> <!-- End of Header -->
 
-    <!-- Start of Title Section -->
-    <section class="title-image">
-      <!-- Div to contain title Image -->
-      <div class="title-image_headline">
-        <h2>Our Mission</h2>
-        <h4>Handpicked, Artisanally, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
-      </div>
-    </section> <!-- End of Title Section -->
-
-    <!-- Start of Content Section -->
+    <!-- Start of Main -->
     <main>
-      <!-- Nested Headline element -->
-      <div class="main_headline">
-        <h2>Tea of the Month</h2>
-        <h4>What's Steeping at The Tea Cozy?</h4>
-      </div>
-      <!-- Nested item containing image and underline -->
-      <div class="main_item">
-        <img src="./Ressources/Images/img-berryblitz.jpg" alt="Fall Berry Blitz Tea">
-        <h4>Fall Berry Blitz Tea</h4>
-      </div>
-      <!-- Nested item containing image and underline -->
-      <div class="main_item">
-        <img src="./Ressources/Images/img-spiced-rum.jpg" alt="Spiced Rum Tea">
-        <h4>Spiced Rum Tea</h4>
-      </div>
-      <!-- Nested item containing image and underline -->
-      <div class="main_item">
-        <img src="./Ressources/Images/img-donut.jpg" alt="Seasonal Donut">
-        <h4>Seasonal Donut</h4>
-      </div>
-      <div class="main_item">
-        <img src="./Ressources/Images/img-myrtle-ave.jpg" alt="Myrtle Ave Tea">
-        <h4>Myrtle Ave Tea</h4>
-      </div>
-      <!-- Nested item containing image and underline -->
-      <div class="main_item">
-        <img src="./Ressources/Images/img-bedford-bizarre.jpg" alt="Bedford Bizzare Tea">
-        <h4>Bedford Bizzare Tea</h4>
-      </div>
-    </main> <!-- End of Content Section -->
+      <!-- Start of Title Section -->
+      <section class="title-image">
+        <!-- Div to contain title Image -->
+        <div class="title-image_headline">
+          <h2>Our Mission</h2>
+          <h4>Handpicked, Artisanally, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        </div>
+      </section> <!-- End of Title Section -->
+      <!-- Start of Content Section -->
+      <section class="main-content">
+        <!-- Nested Headline element -->
+        <div class="main-content_headline">
+          <h2>Tea of the Month</h2>
+          <h4>What's Steeping at The Tea Cozy?</h4>
+        </div>
+        <!-- Nested item containing image and underline -->
+        <div class="main-content_item">
+          <img src="./Ressources/Images/img-berryblitz.jpg" alt="Fall Berry Blitz Tea">
+          <h4>Fall Berry Blitz Tea</h4>
+        </div>
+        <!-- Nested item containing image and underline -->
+        <div class="main-content_item">
+          <img src="./Ressources/Images/img-spiced-rum.jpg" alt="Spiced Rum Tea">
+          <h4>Spiced Rum Tea</h4>
+        </div>
+        <!-- Nested item containing image and underline -->
+        <div class="main-content_item">
+          <img src="./Ressources/Images/img-donut.jpg" alt="Seasonal Donut">
+          <h4>Seasonal Donut</h4>
+        </div>
+        <!-- Nested item containing image and underline -->
+        <div class="main-content_item">
+          <img src="./Ressources/Images/img-myrtle-ave.jpg" alt="Myrtle Ave Tea">
+          <h4>Myrtle Ave Tea</h4>
+        </div>
+        <!-- Nested item containing image and underline -->
+        <div class="main-content_item">
+          <img src="./Ressources/Images/img-bedford-bizarre.jpg" alt="Bedford Bizzare Tea">
+          <h4>Bedford Bizzare Tea</h4>
+        </div>
+      </section> <!-- End of Content Section -->
+    </main> <!-- End of Main -->
 
     <!-- Start of Footer -->
     <footer>
+      <!-- Locations with Background Picture -->
       <div class="locations">
         <div class="locations_container">
           <div class="locations_container_headline">
             <h1>Locations</h1>
           </div>
           <div class="locations_container_item">
-            <h2>Downtown</h2>
-            <h3>384 West 4ht St</h3>
-            <h3>Suite 108</h3>
-            <h3>Portland, Maine</h3>
+            <h3>Downtown</h3>
+            <h4>384 West 4ht St</h4>
+            <h4>Suite 108</h4>
+            <h4>Portland, Maine</h4>
           </div>
           <div class="locations_container_item">
             <h3>East Bayside</h3>
@@ -93,15 +97,16 @@
           </div>
         </div>
       </div>
+      <!-- Contact Information -->
       <div class="contact">
-        <h1>Tea Cozy</h1>
+        <h2>The Tea Cozy</h2>
         <h5>contact@theteacozy.com</h5>
         <h5>917-555-8904</h5>
       </div>
+      <!-- Copyright Information -->
       <div class="copyright">
         <h5>copyright The Tea Cozy 2017</h5>
       </div>
-
     </footer> <!-- End of footer -->
 
   </body>
