Ad dirty hack for page anchor offset

--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
       </div>
       <!-- Nested Bar for Navigation -->
       <nav class="header_navbar">
-        <span><a href="#">Mission</a></span>
-        <span><a href="#">Featured Tea</a></span>
-        <span><a href="#">Locations</a></span>
+        <span><a href="#Mission">Mission</a></span>
+        <span><a href="#FeaturedTea">Featured Tea</a></span>
+        <span><a href="#Locations">Locations</a></span>
       </nav>
     </header> <!-- End of Header -->
 
     <!-- Start of Main -->
     <main>
+      <!-- Dity Hack: Link to Mission with Offset for Header - Happy for any comment-->
+      <div class="anchor-offset" id="Mission"></div>
       <!-- Start of Title Section -->
       <section class="title-image">
         <!-- Div to contain title Image -->
@@ -34,6 +36,8 @@
           <h4>Handpicked, Artisanally, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
         </div>
       </section> <!-- End of Title Section -->
+      <!-- Dity Hack: Link to Features Tea with Offset for Header - Happy for any comment -->
+      <div class="anchor-offset" id="FeaturedTea"></div>
       <!-- Start of Content Section -->
       <section class="main-content">
         <!-- Nested Headline element -->
@@ -72,7 +76,10 @@
     <!-- Start of Footer -->
     <footer>
       <!-- Locations with Background Picture -->
+      <!-- Dity Hack: Link to Locations with Offset for Header - Happy for any comment -->
+      <div class="anchor-offset" id="Locations"></div>
       <div class="locations">
+        <!-- Flex Container for Locations -->
         <div class="locations_container">
           <div class="locations_container_headline">
             <h1>Locations</h1>
